Continue to clean up text

--- a/index.html
+++ b/index.html
@@ -259,9 +259,8 @@
               Visualizing Networks of Contracts and Subcontracts
             </h2>
             <p class="lead">
-              Using a wide variety of visualizations, we will uncover the
-              network of subcontracts to focus efforts on mitigating
-              cybersecurity risks.
+              Using a wide variety of visualizations, we uncover the network of
+              subcontracts to focus efforts on mitigating cybersecurity risks.
             </p>
           </div>
         </div>
@@ -276,7 +275,7 @@
             Instituted in 2006, the Federal Funding Accountability and
             Transparency Act (FFATA) requires that federal contract, loan, and
             other financial assistance awards of more than $25,000 are displayed
-            on a publicly accessible and searchable websiteto to provide the
+            on a publicly accessible and searchable website to to provide the
             American people better access to information on government revenue
             and spending.
             <a href="https://www.usaspending.gov/about" target="_blank"
@@ -300,44 +299,43 @@
         </div>
         <div class="row">
           <div class="col-lg-11 mx-auto my-1">
-            In a recent executive order from the Biden Administration,
-            cybersecurity standards for United States defense contracts became
-            much more rigorous. However, according to an article in CPO Magazine
-            , "a survey of 300 small-to-medium business defense contractors
-            found common failures to comply with CMMC requirements, with 48%
-            having severe vulnerabilities"
+            As a result of In a recent executive order from the Biden
+            Administration, cybersecurity standards for United States defense
+            contracts have become much more rigorous. However, according to an
+            article in CPO Magazine (insert link), "a survey of 300
+            small-to-medium business defense contractors found common failures
+            to comply with CMMC requirements, with 48% having severe
+            vulnerabilities"
             <a
               href="https://www.cpomagazine.com/cyber-security/us-defense-contractors-failing-to-meet-cmmc-requirements-48-have-severe-vulnerabilities/"
               target="_blank"
               >(CPO Magazine)</a
-            >. This is highly concerning on the National Security front, where
-            not only does the US government need to worry about themselves being
-            vulnerable to cyberattacks, but they also need to worry about their
-            defense contractors being vulnerable. Recently, a list of critical
-            and emerging technologies was announced by the Fast Track Action
-            Subcommittee on Critical and Emerging Technologies (CETs) of the
-            National Science and Technology Council. This list included
+            >. This is highly concerning on the National Security front where
+            the US government must worry about cyberattacks to both the
+            government and to their defense contractors. Recently, a list of
+            critical and emerging technologies was announced by the Fast Track
+            Action Subcommittee on Critical and Emerging Technologies (CETs) of
+            the National Science and Technology Council. This list included
             Artificial Intelligence, Biotechnologies, Quantum Information
             Technologies, and Hypersonics. In particular, hypersonics is of
             great interest to the Department of Defense. Hypersonics generally
             applies to weapons that travel over five times the speed of sound
-            and are hard to stop. Combining these concerns and national security
-            interests, the National Security Agency prioritizes new methods of
-            determining critical subcontractors in the supply chain and,
-            therefore, needs to boost their cybersecurity protection.
+            and are challenging to stop. Combining these concerns and national
+            security interests, the National Security Agency is able to
+            prioritize new methods of determining critical subcontractors in the
+            supply chain and where to boost their cybersecurity protection.
           </div>
         </div>
         <div class="row">
           <div class="col-lg-11 mx-auto my-1">
-            There are two steps in determining the businesses that need to
+            There are two steps in determining the businesses that must
             prioritize improving their cybersecurity protection. First, a list
-            of all of the recent contracts and contractors needs to be filtered
-            down to only those that provide a specific type of technologies
-            (based on the CETs). Second, for every contractor, a list of
-            subcontractors must be retrieved and filtered down to only those
-            that supply specific capabilities or products to the prime
-            contractor. In the following analysis, the focus is primarily on the
-            second step.
+            of all of recent contracts and contractors needs to be filtered to
+            only those that provide specific type of technologies (based on the
+            CETs). Second, for every contractor, a list of subcontractors must
+            be retrieved and filtered to only those that supply specific
+            capabilities or products to the prime contractor. In the following
+            analysis, the focus is primarily on the second step.
           </div>
         </div>
         <h3 class="text-dark my-3">Visualizing Subcontracts</h3>
@@ -353,22 +351,24 @@
               >(Wikipedia)</a
             >. According to the USA Spending website, they have been awarded
             over $4.7 billion in contracts, primarily from the Department of
-            Defense, and primarily for products like guided missiles and bombs
+            Defense, and primarily for products including guided missiles and
+            bombs
             <a
               href="https://www.usaspending.gov/recipient/01c4a3a3-b4c5-ce4e-822b-d17f09985001-C/latest"
               target="_blank"
               >(Raytheon Contracts)</a
-            >. Clearly, from the contract description and the company that was
-            awarded the contract, Raytheon is an important company that the US
-            government should have a vested interest in protecting from
-            cybersecurity threats. However, according to the contract, there are
-            348 subcontracts spanning 79 unique subcontractors that supply
-            products and services to Raytheon, but it is not yet clear which
-            subcontractors should be prioritized in the same way that Raytheon
-            will be. The following sections will visualize the subcontractor
-            data in such a way so that it will become clear which subcontractors
-            are more important in the supply chain. First, in <i>Figure 1</i>, a
-            timeline shows the Raytheon contract plus a couple of subcontracts.
+            >. From the contract description and the company that was awarded
+            the contract, it can be determined that Raytheon is an important
+            company in which the US government should have a vested interest in
+            protecting from cybersecurity threats. According to the contract,
+            there are 348 subcontracts spanning 79 unique subcontractors that
+            supply products and services to Raytheon, but it is not yet clear
+            which subcontractors should be prioritized in the same way that
+            Raytheon will be. The following sections will visualize the
+            subcontractor data in such a way so that it will become clear which
+            subcontractors are more important in the supply chain. First, in
+            <i>Figure 1</i>, a timeline shows the Raytheon contract plus a
+            couple of subcontracts.
           </div>
         </div>
       </div>
@@ -401,26 +401,25 @@
         <div class="row">
           <div class="col-lg-11 mx-auto my-1">
             Using the above timeline, several important dates and subcontracts
-            stood out immediately when manually looking at the data from a high
-            level. First, the Raytheon contract started in October of 2016 and
-            ended as of March 2022. Before the contract was awarded, several
-            large subcontracts were awarded to Alliant Techsystems, which upon
-            closer inspection and further research, is tied to Northrup Grumman,
-            a well-known American aerospace and defense company. These
-            subcontracts turn out to be far more significant than any of the
-            other subcontracts, so this is the first indication that this
-            subcontractor is essential. Lastly, after doing a brief search
-            through the subcontracts, there is a clear indication that some of
-            these businesses provide critical supplies for building hypersonic
-            devices. Two subcontracts are shown, one that provides batteries
-            (Advanced Thermal Batteries) and one that provides accelerometers
-            and cables (Dytran).
+            stood out immediately when manually inspecting the data. First, the
+            Raytheon contract started in October of 2016 and ended as of March
+            2022. Prior to the Raytheon contract, several large subcontracts
+            were awarded to Alliant Techsystems, which upon closer inspection
+            and further research, is tied to Northrup Grumman, a well-known
+            American aerospace and defense company. These subcontracts turn out
+            to be far more significant than any of the other subcontracts, so
+            this is the first indication that this subcontractor is essential.
+            Lastly, after doing a brief search through the subcontracts, there
+            is a clear indication that some of these businesses provide critical
+            supplies for building hypersonic devices. Two subcontracts are
+            shown, one that provides batteries (Advanced Thermal Batteries) and
+            one that provides accelerometers and cables (Dytran).
           </div>
         </div>
         <div class="row">
           <div class="col-lg-11 mx-auto my-1">
-            To dive deeper into the timeline and get our first sense of all of
-            the subcontracts, a second timeline chart shows the dates when
+            To dive deeper into the timeline and gain a clearer understanding
+            the subcontracts, a second timeline chart displays the dates when
             Raytheon awarded a subcontract or multiple subcontracts. To explore
             this visualization, click on one of the orange dots. It will show a
             second chart with information on all of the contracts awarded on
@@ -1161,18 +1160,21 @@
         <div class="row">
           <div class="col-lg-11 mx-auto my-1">
             <i>Figure 11</i> is a culmination of all of the previous ideas shown
-            in Figures 7-10. <i>Figure 11</i> shows a network of 13
-            subcontractors that produce a unique product according to the
-            description of their subcontract. As previously hypothesized,
-            Southern Gear & Machine was indeed the only company to produce gears
-            and thus should be considered a single point of failure. However,
-            there are many more. Emoteq produces shafts, API produces washers,
-            and L3 produces encoders. Additionally, the subcontractors that
-            produce multiple products are included if one of those products is
-            unique across all subcontractors. For example, Alliant TechSystems
-            is the only producer of fuselages and detonators, while Aerojet
-            Rocketdyne seems to be the only producer of pyrotechnics and
-            rockets.
+            in Figures 7-10.
+            <b
+              >These 13 subcontractors shown in <i>Figure 11</i> are considered
+              single points of failure as they produce a unique product
+              according to the description of their subcontract.
+            </b>
+            As previously hypothesized, Southern Gear & Machine was indeed the
+            only company to produce gears and thus should be considered a single
+            point of failure. However, there are many more. Emoteq produces
+            shafts, API produces washers, and L3 produces encoders.
+            Additionally, the subcontractors that produce multiple products are
+            included if one of those products is unique across all
+            subcontractors. For example, Alliant TechSystems is the only
+            producer of fuselages and detonators, while Aerojet Rocketdyne seems
+            to be the only producer of pyrotechnics and rockets.
             <b
               >However, the most important observation to be made happens while
               exploring this network. Out of the 13 subcontractors, 2
@@ -1233,16 +1235,17 @@
             In this analysis, three subcontractors were chosen out of 79 total.
             Using this analysis, the US government should specifically focus its
             efforts on these three companies. However, they should not lose
-            sight of the rest of these subcontractors. For future exploration,
-            there are many subcontractors in this contract that should be
-            considered high priority and are single points of failure, whether
-            the contract description says that or not. A simple table that
-            prioritizes each subcontract based on multiple criteria like funding
-            and the product they supply would give an excellent view of the
-            cybersecurity priority level. A viewer would find it helpful to have
-            one table ordering all subcontractors by priority level with an
-            explanation behind the order being automatically generated through
-            the code powering these visualizations.
+            sight of the rest of these subcontractors. For further
+            consideration, there are many subcontractors in this contract that
+            should be considered high priority and are single points of failure.
+            In <i>Figure 11</i>, 13 subcontractors were considered single points
+            of failure for this contract. A simple table that prioritizes each
+            subcontract based on multiple criteria like funding and the product
+            they supply would give an excellent view of the cybersecurity
+            priority level. A viewer would find it helpful to have one table
+            ordering all subcontractors by priority level with an explanation
+            behind the order being automatically generated through the code
+            powering these visualizations.
           </div>
         </div>
       </div>
