--- a/index.html
+++ b/index.html
@@ -299,13 +299,12 @@
         </div>
         <div class="row">
           <div class="col-lg-11 mx-auto my-1">
-            As a result of In a recent executive order from the Biden
-            Administration, cybersecurity standards for United States defense
-            contracts have become much more rigorous. However, according to an
-            article in CPO Magazine (insert link), "a survey of 300
-            small-to-medium business defense contractors found common failures
-            to comply with CMMC requirements, with 48% having severe
-            vulnerabilities"
+            In a recent executive order from the Biden Administration,
+            cybersecurity standards for United States defense contracts have
+            become much more rigorous. However, according to an article in CPO
+            Magazine, "a survey of 300 small-to-medium business defense
+            contractors found common failures to comply with CMMC requirements,
+            with 48% having severe vulnerabilities"
             <a
               href="https://www.cpomagazine.com/cyber-security/us-defense-contractors-failing-to-meet-cmmc-requirements-48-have-severe-vulnerabilities/"
               target="_blank"
